--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,9 @@
 // Shared
 @import './shared/reset.scss';
+@import './shared/base.scss';
 
 // Webgl
 @import './webgl/webgl.scss';
+
+// Video
+@import './video/video.scss';
