--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,6 +5,7 @@
 // Webgl
 @import './webgl/webgl.scss';
 @import './webgl/reset.scss';
+@import './webgl/fullscreen.scss';
 
 // Video
 @import './video/video.scss';
