--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,8 +4,7 @@
 
 // Webgl
 @import './webgl/webgl.scss';
-@import './webgl/reset.scss';
-@import './webgl/fullscreen.scss';
+@import './webgl/btn.scss';
 
 // Video
 @import './video/video.scss';
