--- a/src/styles/video/video.scss
+++ b/src/styles/video/video.scss
@@ -19,7 +19,7 @@ video {
 }
 
 .video__clouds--transition {
-  transform: translate(-50%, -50%) rotate(45deg);
+  transform: translate(-50%, -50%);
   scale: 2;
-  opacity: 0.85;
+  opacity: 0.95;
 }
