--- a/src/styles/webgl/webgl.scss
+++ b/src/styles/webgl/webgl.scss
@@ -1,4 +1,16 @@
 .webgl {
   width: 100vw;
   height: 100vh;
+  background-color: white;
+}
+
+.white__cover {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  opacity: 0.25;
 }
