--- a/src/styles/webgl/webgl.scss
+++ b/src/styles/webgl/webgl.scss
@@ -6,9 +6,8 @@
 
 .white__cover {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   background-color: white;
