--- a/src/styles/shared/ui.scss
+++ b/src/styles/shared/ui.scss
@@ -7,10 +7,12 @@
   z-index: 999;
 }
 
+// Intro
+
 .ui__intro {
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 45%;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
@@ -58,8 +60,49 @@
   @include button;
 }
 
-//
+// Top
 
-[data-type='attack'] {
-  font-family: 'attack_typeregular';
+.ui__top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 11rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5.5rem;
+  padding: 0 2.4rem;
+  box-sizing: border-box;
+  span {
+    font-family: 'work_sansmedium';
+    font-size: 1.4rem;
+    color: $black;
+    cursor: pointer;
+    &:hover {
+      opacity: 0.75 !important;
+    }
+  }
+}
+
+// Bottom
+
+.ui__bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 6.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 2.4rem;
+  box-sizing: border-box;
+  span {
+    color: $black;
+    cursor: pointer;
+    &:hover {
+      opacity: 0.75 !important;
+    }
+  }
 }
