--- a/src/styles/shared/ui.scss
+++ b/src/styles/shared/ui.scss
@@ -23,8 +23,8 @@
 .ui__intro__title {
   font-size: 3.7rem;
   font-family: 'work_sansregular';
-  color: $black;
-  display: flex;
+  color: $white;
+  display: none;
   gap: calc(3.7rem / 7);
   span {
     display: inline-flex;
@@ -37,7 +37,7 @@
 }
 
 .ui__intro__symbol {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -45,19 +45,21 @@
   &--line {
     width: 0.2rem;
     height: 6.9rem;
-    background-color: $black;
+    background-color: $white;
   }
   &--circle {
     width: 1.2rem;
     height: 1.2rem;
     border-radius: 50%;
-    background-color: $black;
+    background-color: $white;
     margin-top: -5.5rem;
   }
 }
 
 .ui__intro--btn {
-  @include button;
+  @include button_new($white);
+  visibility: hidden;
+  margin-top: 10rem;
 }
 
 // Top
@@ -77,7 +79,7 @@
   span {
     font-family: 'work_sansmedium';
     font-size: 1.4rem;
-    color: $black;
+    color: $white;
     cursor: pointer;
     &:hover {
       opacity: 0.75 !important;
@@ -99,7 +101,7 @@
   padding: 0 2.4rem;
   box-sizing: border-box;
   span {
-    color: $black;
+    color: $white;
     cursor: pointer;
     &:hover {
       opacity: 0.75 !important;
@@ -151,4 +153,119 @@
   100% {
     transform: translateX(-3rem) rotate(-5deg);
   }
+}
+
+// Read
+
+.ui__read {
+  position: absolute;
+  bottom: 12rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999;
+  display: none;
+}
+
+.ui__read--btn {
+  @include button_new($white);
+  opacity: 0;
+}
+
+.ui__read--continue {
+  font-size: 1.4rem;
+  color: $white;
+  font-family: 'work_sansmedium';
+  text-align: center;
+  width: 100%;
+  margin-top: 6rem;
+  padding: 1rem;
+  cursor: pointer;
+  box-sizing: border-box;
+  opacity: 0;
+  &:hover {
+    opacity: 0.75 !important;
+  }
+}
+
+// Story
+
+.ui__story--container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 0rem 29rem;
+  box-sizing: border-box;
+  overflow-y: scroll;
+  display: none;
+}
+
+.ui__story {
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ui__story--number {
+  font-family: 'work_sansregular';
+  font-size: 1.8rem;
+  opacity: 0.5;
+  align-self: baseline;
+  margin-top: 24rem;
+}
+
+.ui__story--title {
+  font-family: 'attack_typeregular';
+  font-size: 6rem;
+  margin-top: 3rem;
+  width: 50%;
+  align-self: baseline;
+  span {
+    span {
+      opacity: 0;
+      display: inline-block;
+    }
+  }
+}
+
+.ui__story--body {
+  font-family: 'work_sansregular';
+  font-size: 1.4rem;
+  margin-top: 10rem;
+  line-height: 2.5rem;
+  width: 50%;
+  margin-left: 50%;
+}
+
+.ui__story--btn {
+  margin-top: 15rem !important;
+  margin-bottom: 15rem;
+  @include button_new($black);
+}
+
+// Sidebar
+.ui__sidebar {
+  position: absolute;
+  left: 3rem;
+  top: 50%;
+  transform: translateY(-50%) rotate(180deg);
+  width: 0.2rem;
+  height: 16rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.ui__sidebar--item {
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-color: $white;
+  opacity: 0.25;
+  transition: 0.75s;
+}
+
+[data-reveal='ui'] {
+  opacity: 0;
 }
