--- a/src/styles/shared/base.scss
+++ b/src/styles/shared/base.scss
@@ -4,5 +4,7 @@ html {
 
 body {
   overflow: hidden;
-  // background-color: white;
+  // background-color: white;ň
+  width: 100vw;
+  height: 100vh;
 }
