--- a/src/styles/shared/ui.scss
+++ b/src/styles/shared/ui.scss
@@ -235,6 +235,10 @@
   box-sizing: border-box;
   overflow-y: scroll;
   display: none;
+  &::-webkit-scrollbar {
+    width: 0; /* Remove scrollbar space */
+    background: transparent; /* Optional: just make scrollbar invisible */
+  }
 }
 
 .ui__story {
