--- a/src/styles/views/menu.scss
+++ b/src/styles/views/menu.scss
@@ -111,3 +111,111 @@
   font-family: 'attack_typeregular';
   color: $black;
 }
+
+// ---> About
+.about {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
+  flex-direction: column;
+  overflow-y: scroll;
+  z-index: 1;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1;
+  gap: 5rem;
+  margin-bottom: 20rem;
+  &::-webkit-scrollbar {
+    width: 0; /* Remove scrollbar space */
+    background: transparent; /* Optional: just make scrollbar invisible */
+  }
+}
+
+.about__hr {
+  width: 52%;
+  min-height: 0.1rem;
+  background-color: $white;
+  opacity: 0.25;
+  margin: 10rem 0;
+}
+
+.about__text {
+  font-family: 'work_sansregular';
+  font-size: 1.4rem;
+  line-height: 2rem;
+  width: 30%;
+  color: $white;
+  margin-top: 30rem;
+}
+
+.about__title {
+  font-size: 4.5rem;
+  font-family: 'attack_typeregular';
+  color: $white;
+  margin-bottom: 10rem;
+}
+
+.about__image {
+  width: 100%;
+  &:last-child {
+    margin-bottom: 20rem;
+  }
+}
+
+.about__description {
+  width: 52%;
+  display: flex;
+  position: relative;
+  min-height: 30rem;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about__description__container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 30%;
+  margin-bottom: 2rem;
+}
+
+.about__description__number {
+  font-family: 'work_sansregular';
+  font-size: 1.4rem;
+  line-height: 2rem;
+  color: $white;
+  opacity: 0.5;
+  margin-bottom: 1rem;
+}
+
+.about__description__body {
+  font-family: 'work_sansregular';
+  font-size: 1.4rem;
+  line-height: 2rem;
+  color: $white;
+}
+
+.about__arrow {
+  width: 0.1rem;
+  height: 75%;
+  background-color: $white;
+  position: relative;
+}
+
+.about__arrow--end {
+  width: 0.1rem;
+  height: 2rem;
+  background-color: $white;
+  position: absolute;
+  bottom: 0.4rem;
+  &:nth-child(1) {
+    transform: rotate(45deg) translateX(1rem);
+  }
+  &:nth-child(2) {
+    transform: rotate(-45deg) translateX(-1rem);
+  }
+}
